--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
 				display: inline-block;
 			}
 
+			.header {
+				font-family: 'Poppins', sans-serif;
+				color: white;
+				font-size: 5rem;
+				font-weight: 100;
+				margin: 20% 6% 0% 6%;
+				width: fit-content;
+				display: inline-block;
+			}
+
 			.menu {
 				float: right;
 				width: 3rem;
@@ -46,13 +56,15 @@
 		</style>
 	</head>
 	<body class="bg">
-		<h1 class="h1">Your Player</h1>
+		<h1 class="h1">WASH GAMES</h1>
 		<img class="menu" src="ic_menu.png" width="25px" height="25px">
 				
 		<img src="Player Card 1.png" class="your-player"/>
+		<h1 class="h1">WASH GAMES</h1>
 		<br>
-		<img src="Player Card 2.png" class="your-player"/>
+		<!-- <img src="Player Card 2.png" class="your-player"/> -->
 		<br>
-		<img src="Player Card 3.png" class="your-player"/>
+		<!-- <img src="Player Card 3.png" class="your-player"/> -->
+		<h1 class="header">WASH GAMES</h1>
 	</body>
 </html>
